# lem_in

./: CMakeLists.txt  README.md  ants_validator.c  error.c  error.h  errors.c  lem_in.h  main.c  parse_from_file.c  print_way.c  prints.c  read.c  vertex.c
Lem-in-map/: tests.sh
Project/: CMakeLists.txt  algo.c  ants.c  lem_in.h  main.c  rooms.c  vertex.c
__MACOSX/libft/libft/: ._int_plus2.c
algo/: CMakeLists.txt  file.txt  lem_in.h  main.c
lem_inDEBUG/: CMakeLists.txt  algo.txt  ants_validator.c  error.c  error.h  lem_in.h  main.c  parse_from_file.c  prints.c
lem_inDEBUG/maps/: file.txt  map00  map01
libft/: t  t1
maps/: map00  map01
source/: main.c  read.c
visu/: Makefile
visu/libft/libft/: Makefile
visu/source/: data.c  main.c  text.c  visu.h
